feat: Cria a estrutura do arquivo para o DTO Comentario